# webscraping_selenium

./: .env.example  .gitignore  404.html  Dockerfile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.astro/: config.yaml
1_data_sources/: index.html
1_setup/: index.html
2_architecture/: index.html
2_data_sources/: index.html
3_scraping_logic/: index.html
4_airflow/: index.html
4_data_storage/: index.html
5_boas_praticas/: index.html
5_setup/: index.html
dags/: dag_load.py  dag_scraper.py  dag_transform.py  etl_dag.py
data/: resultados_clean.json  resultados_raw.json
docs/: 1_data_sources.md  1_setup.md  2_architecture.md  2_data_sources.md  3_scraping_logic.md  4_airflow.md  5_boas_praticas.md  5_setup.md  index.md
include/data/: resultados_clean.json  resultados_clean_backup.json  resultados_raw.json
search/: search_index.json
sql/: create_table.sql  insert_db.py
src/: app.py  extract_data.py  load_data.py  transform_data.py
