[project]
name = "webscraping"
version = "0.1.0"
description = "web-scraping alugueis imoveis"
authors = [
    {name = "Lenon Torma",email = "lenoncastro18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "ruff (>=0.12.0,<0.13.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
