[project]
name = "webscraping"
version = "0.1.0"
description = "web-scraping alugueis imoveis"
authors = [
    {name = "Lenon Torma",email = "lenoncastro18@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "selenium (>=4.33.0,<5.0.0)",
    "ruff (>=0.12.0,<0.13.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "mermaid (>=0.3.2,<0.4.0)",
    "mkdocs-material (>=9.6.14,<10.0.0)",
    "mkdocs-material-extensions (>=1.3.1,<2.0.0)",
    "deptry (>=0.23.0,<0.24.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-git-authors-plugin = "^0.10.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"
mkdocs-glightbox = "^0.4.0"

[tool.poetry.scripts]
docs-deploy = "mkdocs.__main__:gh_deploy"